# themis-poc

./: .gitignore  README.md  fop.py  requirements.txt
.devcontainer/: build-vscode-fops-prompter.sh  devcontainer.json
fop_ide/: Dockerfile  docker-compose.yml
fop_ide/workspace/: test.py
fop_ide/workspace/.theia/: launch.json
fop_runner/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fop.py  start_fop.sh
fops_core/: retry.py  sinks.py  trace.py
integrations/vscode/: prompt_client.py
primitives/: directives.py
themis_fop_core/: README.md  pyproject.toml
themis_fop_core/src/fops/: __init__.py
themis_fop_core/src/fops/integrations/vscode/: retry_vscode.py
themis_fop_core/src/fops/internal/: args.py  retry.py  sinks.py  trace.py
themis_fop_core/src/fops/lang/: prompt.py  send.py  tc.py  tm.py  verify_tm.py
themis_fop_core/test/: fop.py  fop2.py  setup.sh
themis_fop_driver/: README.md
vscode-fops-prompter/: README.md  package-lock.json  package.json  tsconfig.json
vscode-fops-prompter/src/: extension.ts
